...
    val section: UseSmileIDSampleProductSection,
    val capture: Boolean = true,
    val needsIdDetails: Boolean = false,
) {
    SmartSelfieEnrollment(
        "smartSelfieEnrollment",
        "SmartSelfie Enrollment",
        "Registration",
        UseSmileIDSampleMarks.SMART_SELFIE,
        UseSmileIDSampleProductSection.Authentication,
    ),
    SmartSelfieAuth(
        "smartSelfieAuth",
...
        "Verification",
        UseSmileIDSampleProductSection.Verifications,
        needsIdDetails = true,
    ),
    BiometricKyc(
        "biometricKyc",
        "Biometric KYC",
        "Biometric",
        "KYC",
        UseSmileIDSampleProductSection.Verifications,
        needsIdDetails = true,
    ),
    EnhancedKyc(
...
